# scrapers

./: .gitignore  pyproject.toml
googlemaps/: check.json  config.py  decoder.py  google_scraper.py  index.html  leads.json  main.py  map.html  mapper.py  protoparser.py  roadmap.txt  scraper.py
