[project]
name = "scrapers"
version = "0.1.0"
description = "Project for my apify scrapers"
authors = [
    {name = "Aleksandr Kuraskin"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14, <4.0"
dependencies = [
    "crawlee[all] (>=1.4.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
